@@ -5,7 +5,6 @@ import com.google.common.base.Preconditions;
 import de.monticore.symbols.basicsymbols.BasicSymbolsMill;
 import de.monticore.symbols.basicsymbols._symboltable.TypeSymbol;
 import de.monticore.types3.ISymTypeVisitor;
-import de.se_rwth.commons.logging.Log;
 
 import java.util.Arrays;
 import java.util.LinkedHashMap;
@@ -69,7 +68,7 @@ public class SymTypePrimitive extends SymTypeExpression {
    */
   @Deprecated(forRemoval = true)
   public static final List<String> primitiveTypes =
-      Collections.unmodifiableList(Arrays.asList(
+      List.of(
           BasicSymbolsMill.BOOLEAN,
           BasicSymbolsMill.BYTE,
           BasicSymbolsMill.CHAR,
@@ -80,7 +79,7 @@ public class SymTypePrimitive extends SymTypeExpression {
           BasicSymbolsMill.DOUBLE,
           //deprecated: use SymTypeOfVoid
           BasicSymbolsMill.VOID
-      ));
+      );
 
   /**
    * Map for unboxing const types (e.g. "java.lang.Boolean" -&gt; "boolean")
@@ -99,7 +98,7 @@ public class SymTypePrimitive extends SymTypeExpression {
    * initializing the maps
    */
   static {
-    Map<String, String> unboxMap_temp = new LinkedHashMap<String, String>();
+    Map<String, String> unboxMap_temp = new LinkedHashMap<>();
     unboxMap_temp.put("java.lang.Boolean", "boolean");
     unboxMap_temp.put("java.lang.Byte", "byte");
     unboxMap_temp.put("java.lang.Character", "char");
@@ -120,7 +119,7 @@ public class SymTypePrimitive extends SymTypeExpression {
     unboxMap_temp.put("Double", "double");
     unboxMap = Collections.unmodifiableMap(unboxMap_temp);
 
-    Map<String, String> boxMap_temp = new LinkedHashMap<String, String>();
+    Map<String, String> boxMap_temp = new LinkedHashMap<>();
     boxMap_temp.put("boolean", "java.lang.Boolean");
     boxMap_temp.put("byte", "java.lang.Byte");
     boxMap_temp.put("char", "java.lang.Character");
@@ -143,10 +142,7 @@ public class SymTypePrimitive extends SymTypeExpression {
    */
   @Deprecated(forRemoval = true)
   public static String unbox(String boxedName) {
-    if (unboxMap.containsKey(boxedName))
-      return unboxMap.get(boxedName);
-    else
-      return boxedName;
+    return unboxMap.getOrDefault(boxedName, boxedName);
   }
 
   /**
@@ -159,10 +155,7 @@ public class SymTypePrimitive extends SymTypeExpression {
    */
   @Deprecated(forRemoval = true)
   public static String box(String unboxedName) {
-    if (boxMap.containsKey(unboxedName))
-      return boxMap.get(unboxedName);
-    else
-      return unboxedName;
+    return boxMap.getOrDefault(unboxedName, unboxedName);
   }
 
   /**
